--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -120,42 +120,6 @@
       <string>Trade</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_3">
-     <property name="geometry">
-      <rect>
-       <x>570</x>
-       <y>80</y>
-       <width>111</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>13</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>William: $2000</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>570</x>
-       <y>50</y>
-       <width>91</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>13</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Alex: $2000</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="btnProperties">
      <property name="geometry">
       <rect>
@@ -249,8 +213,6 @@
     <zorder>lblBoard</zorder>
     <zorder>btnTrade</zorder>
     <zorder>btnRoll</zorder>
-    <zorder>label_3</zorder>
-    <zorder>label_2</zorder>
     <zorder>btnProperties</zorder>
     <zorder>btnEnd</zorder>
     <zorder>label_4</zorder>
@@ -270,10 +232,77 @@
      <string/>
     </property>
    </widget>
+   <widget class="QGroupBox" name="groupBox2">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>90</y>
+      <width>561</width>
+      <height>271</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Enter Player Names</string>
+    </property>
+    <widget class="QTextEdit" name="txtPlayer1">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>104</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="txtPlayer2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>50</y>
+       <width>104</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="txtPlayer3">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>80</y>
+       <width>104</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="txtPlayer4">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>110</y>
+       <width>104</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btnGame">
+     <property name="geometry">
+      <rect>
+       <x>350</x>
+       <y>152</y>
+       <width>151</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Start Game</string>
+     </property>
+    </widget>
+   </widget>
    <zorder>gbBoard</zorder>
    <zorder>btnStart</zorder>
    <zorder>groupbox1</zorder>
    <zorder>lblProperty</zorder>
+   <zorder>groupBox2</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
