--- a/uipics.qrc
+++ b/uipics.qrc
@@ -8,5 +8,31 @@
         <file>6.png</file>
         <file>board1.png</file>
         <file>adminbuilding.png</file>
+        <file>Alexander Fine Arts Center Deed.png</file>
+        <file>Anderson Field Deed.png</file>
+        <file>Bonner House Deed.png</file>
+        <file>Callaghan Stadium Deed.png</file>
+        <file>Gazebo Deed.png</file>
+        <file>J Frank Marsh Library Deed.png</file>
+        <file>Jerry and Jean Beasley Student Center Deed.png</file>
+        <file>Math Lobby.png</file>
+        <file>Nick Rahall Technology Center Deed.png</file>
+        <file>North Towers Deed.png</file>
+        <file>Observatory Deed.png</file>
+        <file>President's Home Deed.png</file>
+        <file>Sarvay Hall Deed.png</file>
+        <file>Science Hall Deed.png</file>
+        <file>South Towers Deed.png</file>
+        <file>Tennis Court Deed.png</file>
+        <file>University Point Deed.png</file>
+        <file>Upward Bound House Dee.png</file>
+        <file>Valley Pavilion Deed.png</file>
+        <file>Wilson Hall Deed.png</file>
+        <file>Women's Softball Field Deed.png</file>
+        <file>Woodell Hall Deed.png</file>
+        <file>blue.png</file>
+        <file>green.png</file>
+        <file>purple.png</file>
+        <file>red.png</file>
     </qresource>
 </RCC>
